# mcpp

./: .clang-format  .clang-tidy  .clangd  .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  README.md
docs/: QUALITY_TOOLS.md
examples/: README.md
examples/01_basic_sync/: README.md  main.cpp
examples/02_basic_async/: README.md  main.cpp
examples/03_filesystem_server/: README.md  main.cpp
examples/04_http_transport/: README.md  main.cpp
examples/05_custom_handlers/: README.md  main.cpp
examples/06_circuit_breaker/: README.md  main.cpp
examples/07_arcade_toolkit/: README.md  main.cpp
include/mcpp/: protocol.hpp  transport.hpp
include/mcpp/async/: async_mcp_client.hpp  async_process_transport.hpp  async_transport.hpp
include/mcpp/client/: arcade_client.hpp  async_handlers.hpp  client_error.hpp  elicitation_handler.hpp  handler_utils.hpp  mcp_client.hpp  roots_handler.hpp  sampling_handler.hpp
include/mcpp/json/: fast_json.hpp
include/mcpp/log/: logger.hpp  spdlog_logger.hpp
include/mcpp/protocol/: json_rpc.hpp  mcp_types.hpp
include/mcpp/resilience/: circuit_breaker.hpp
include/mcpp/security/: url_validator.hpp
include/mcpp/transport/: backoff_policy.hpp  http_client.hpp  http_transport.hpp  http_transport_config.hpp  http_types.hpp  process_transport.hpp  retry_policy.hpp  session_manager.hpp  sse_parser.hpp  stdio_transport.hpp  transport_error.hpp
src/async/: async_mcp_client.cpp  async_process_transport.cpp
src/client/: arcade_client.cpp  mcp_client.cpp
src/json/: fast_json.cpp
src/log/: logger.cpp  spdlog_logger.cpp
src/protocol/: json_rpc.cpp
src/resilience/: circuit_breaker.cpp
src/security/: url_validator.cpp
src/transport/: http_client_cpr.cpp  http_transport.cpp  http_transport_config.cpp  http_types.cpp  process_transport.cpp  session_manager.cpp  sse_parser.cpp  stdio_transport.cpp
tests/: additional_features_test.cpp  arcade_client_test.cpp  arcade_gateway_test.cpp  async_client_test.cpp  async_process_stderr_test.cpp  circuit_breaker_test.cpp  code_review_fixes_test.cpp  concurrency_test.cpp  everything_server_test.cpp  fast_json_test.cpp  handler_integration_test.cpp  http_config_test.cpp  http_transport_config_test.cpp  http_transport_test.cpp  integration_test.cpp  json_rpc_request_test.cpp  logger_test.cpp  mcp_client_test.cpp  mcp_types_test.cpp  process_transport_test.cpp  protocol_test.cpp  real_server_test.cpp  retry_test.cpp  session_management_test.cpp  spdlog_logger_test.cpp  sse_parser_test.cpp  stdio_transport_test.cpp  url_validator_test.cpp
tests/mocks/: mock_http_client.hpp  mock_mcp_server.hpp
tools/mcpp-cli/: main.cpp
